--- a/adminProjects.html
+++ b/adminProjects.html
@@ -192,7 +192,7 @@
                                                 <a href="adminProjectDetails.html" class="w-100 mr-5">
                                                     <h5 class="mb-3">Scoliosis Resource Centre</h5>
                                                     <div class="progress mb-4" style="height: 20px;">
-                                                        <div class="progress-bar progress-bar-striped font-weight-bold bg-success" style="width: 91%;">91%</div>
+                                                        <div class="progress-bar progress-bar-striped font-weight-bold bg-success" data-progress="91%"></div>
                                                     </div>
                                                 </a>
                                                 <div class="text-right mt-3">
@@ -204,7 +204,7 @@
                                                 <a href="adminProjectDetails.html" class="w-100 mr-5">
                                                     <h5 class="mb-3">Scoliosis Resource Centre</h5>
                                                     <div class="progress mb-4" style="height: 20px;">
-                                                        <div class="progress-bar progress-bar-striped font-weight-bold bg-success" style="width: 91%;">91%</div>
+                                                        <div class="progress-bar progress-bar-striped font-weight-bold bg-success" data-progress="20%"></div>
                                                     </div>
                                                 </a>
                                                 <div class="text-right mt-3">
@@ -216,7 +216,7 @@
                                                 <a href="adminProjectDetails.html" class="w-100 mr-5">
                                                     <h5 class="mb-3">Scoliosis Resource Centre</h5>
                                                     <div class="progress mb-4" style="height: 20px;">
-                                                        <div class="progress-bar progress-bar-striped font-weight-bold bg-success" style="width: 91%;">91%</div>
+                                                        <div class="progress-bar progress-bar-striped font-weight-bold bg-success" data-progress="50%"></div>
                                                     </div>
                                                 </a>
                                                 <div class="text-right mt-3">
@@ -228,7 +228,7 @@
                                                 <a href="adminProjectDetails.html" class="w-100 mr-5">
                                                     <h5 class="mb-3">Scoliosis Resource Centre</h5>
                                                     <div class="progress mb-4" style="height: 20px;">
-                                                        <div class="progress-bar progress-bar-striped font-weight-bold bg-success" style="width: 91%;">91%</div>
+                                                        <div class="progress-bar progress-bar-striped font-weight-bold bg-success" data-progress="95%"></div>
                                                     </div>
                                                 </a>
                                                 <div class="text-right mt-3">
@@ -240,7 +240,7 @@
                                                 <a href="adminProjectDetails.html" class="w-100 mr-5">
                                                     <h5 class="mb-3">Scoliosis Resource Centre</h5>
                                                     <div class="progress mb-4" style="height: 20px;">
-                                                        <div class="progress-bar progress-bar-striped font-weight-bold bg-success" style="width: 91%;">91%</div>
+                                                        <div class="progress-bar progress-bar-striped font-weight-bold bg-success" data-progress="91%"></div>
                                                     </div>
                                                 </a>
                                                 <div class="text-right mt-3">
@@ -252,7 +252,7 @@
                                                 <a href="adminProjectDetails.html" class="w-100 mr-5">
                                                     <h5 class="mb-3">Scoliosis Resource Centre</h5>
                                                     <div class="progress mb-4" style="height: 20px;">
-                                                        <div class="progress-bar progress-bar-striped font-weight-bold bg-success" style="width: 91%;">91%</div>
+                                                        <div class="progress-bar progress-bar-striped font-weight-bold bg-success" data-progress="91%"></div>
                                                     </div>
                                                 </a>
                                                 <div class="text-right mt-3">
@@ -316,6 +316,13 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="js/animation.js" type="text/javascript"></script>
+    <script>
+        $(".progress").each(function(index, progress){
+                var progressBar = $(progress).find(".progress-bar");
+                var progressPercent = parseInt($(progressBar).attr("data-progress"));
+                $(progressBar).css("width",progressPercent+"%").text(progressPercent+"%");
+            });
+    </script>
     <script type="text/javascript" src="js/functionality.js"></script>
     <script src="https://cdn.datedropper.com/get/{{LICENSE}}"></script>
 
