--- a/adminProfile.html
+++ b/adminProfile.html
@@ -65,6 +65,12 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
+                                    <a href="adminSubscribers.html" class="nav-link text-white p-3 mb-2 sidebar-link">
+                                        <i class="fas fa-address-book text-light fa-lg mr-3"></i>
+                                        Subscribers
+                                    </a>
+                                </li>
+                                <li class="nav-item">
                                     <a href="adminProfile.html" class="nav-link text-white p-3 mb-2 current">
                                         <i class="fas fa-user text-light fa-lg mr-3"></i>
                                         Profile
