--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>Kenya Scoliosis Foundation</title>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
         <link rel="stylesheet" href="css/style.css">
 
@@ -100,10 +101,10 @@
             <div class="section-2">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-7">
+                        <div class="col-md-7" data-aos="fade-right">
                             <img src="images/ourWork.JPG" alt="image">
                         </div>
-                        <div class="col-md-5">
+                        <div class="col-md-5" data-aos="fade-left">
                             <h1 class="text-white">What We Do</h1>
                             <a href="donateCreditCard.html">Help Us</a>
                             <p class="para-1">
@@ -123,11 +124,11 @@
             <!--Section 3 Pillars of Scoliosis-->
             <div class="section-3">
                 <div class="container text-center">
-                    <h1 class="heading-1">Pillars of Scoliosis</h1>
+                    <h1 class="heading-1" data-aos="fade">Pillars of Scoliosis</h1>
                     <div class="row justify-content-center">
 
                         <!--Training and awareness-->
-                        <div class="col-md-4">
+                        <div class="col-md-4" data-aos="fade-right">
                             <div class="d-flex flex-row">
                                 <i class="fas fa-book-open fa-3x m-2"></i>
                                 <div class="d-flex flex-column">
@@ -136,7 +137,7 @@
                             </div>
                         </div>
                         <!--Awareness Campaign-->
-                        <div class="col-md-4">
+                        <div class="col-md-4" data-aos="fade-up">
                             <div class="d-flex flex-row">
                                 <i class="fas fa-info-circle fa-3x m-2"></i>
                                 <div class="d-flex flex-column">
@@ -145,7 +146,7 @@
                             </div>
                         </div>
                         <!--Research on Scoliosis-->
-                        <div class="col-md-4">
+                        <div class="col-md-4" data-aos="fade-left">
                             <div class="d-flex flex-row">
                                 <i class="fas fa-search fa-3x m-2"></i>
                                 <div class="d-flex flex-column">
@@ -155,7 +156,7 @@
                         </div>
                         <br><br><br><br><br>
                         <!--Screening and management of scoliosis-->
-                        <div class="col-md-4">
+                        <div class="col-md-4" data-aos="fade-right">
                             <div class="d-flex flex-row">
                                 <i class="fas fa-user-md fa-3x m-2"></i>
                                 <div class="d-flex flex-column">
@@ -164,7 +165,7 @@
                             </div>
                         </div>
                         <!--Advocacy-->
-                        <div class="col-md-4">
+                        <div class="col-md-4" data-aos="fade-left">
                             <div class="d-flex flex-row">
                                 <i class="fas fa-question fa-3x m-2"></i>
                                 <div class="d-flex flex-column">
@@ -181,7 +182,7 @@
             <div class="section-4">
                 <div class="container-fluid">
                     <div class="d-flex justify-content-end">
-                        <div class="d-flex flex-column m-4">
+                        <div class="d-flex flex-column m-4" data-aos="fade">
                             <h1 class="heading-1 ml-0">Like & Share Your Love</h1>
                             <p class="para">
                                 A kind gesture can reach a wound that only compassion can heal
@@ -197,8 +198,8 @@
             <!--Section 5 Upcomming Events-->
             <div class="section-5">
                 <div class="container text-center">
-                    <h1 class="heading-1">Upcoming Events</h1>
-                    <p class="para-1">
+                    <h1 class="heading-1" data-aos="fade">Upcoming Events</h1>
+                    <p class="para-1" data-aos="fade">
                         We have a host of wonderful events lined up for the year ahead that help raise funds and awareness 
                         for Scoliosis. Whether you are an artist, a runner, a walker or a cyclist there are lots of things 
                         you can get involved with. We also have talks, exhibitions and sales and dinners so there is something 
@@ -207,7 +208,7 @@
                     
                     <div class="row justify-content-center text-center">
                         <!--The first card-->
-                        <div class="col-md-4">
+                        <div class="col-md-4" data-aos="fade-right">
                             <div class="card card-1">
                                 <img src="images/img4.jpg" alt="img1" class="card-img-top">
                                 <div class="card-body">
@@ -231,7 +232,7 @@
                             </div>
                         </div>
                         <!--The second card-->
-                        <div class="col-md-4">
+                        <div class="col-md-4" data-aos="fade-up">
                             <div class="card card-2">
                                 <img src="images/img4.jpg" alt="img1" class="card-img-top">
                                 <div class="card-body">
@@ -257,7 +258,7 @@
                             </div>
                         </div>
                         <!--The Third card-->
-                        <div class="col-md-4">
+                        <div class="col-md-4" data-aos="fade-left">
                             <div class="card card-3">
                                 <img src="images/img4.jpg" alt="img1" class="card-img-top">
                                 <div class="card-body">
@@ -289,7 +290,7 @@
             <div class="section-6">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-xl-10 col-lg-9 col-md-8">
+                        <div class="col-xl-10 col-lg-9 col-md-8" data-aos="fade">
                             <h1 class="heading-1 text-white">Our Partners</h1>
                             <div class="row pt-md-5 mt-md-3 mb-md-5 justify-content-between text-center">
                                 <div class="col-md-6 col-sm-2">
@@ -308,8 +309,8 @@
             <!--Section 7 Our stories-->
             <div class="section-7">
                 <div class="container text-center">
-                    <h1 class="heading-1">Our Stories</h1>
-                    <p class="para-1">
+                    <h1 class="heading-1" data-aos="fade">Our Stories</h1>
+                    <p class="para-1" data-aos="fade">
                         We have a host of wonderful events lined up for the year ahead that help raise funds and awareness 
                         for Scoliosis. Whether you are an artist, a runner, a walker or a cyclist there are lots of things 
                         you can get involved with. We also have talks, exhibitions and sales and dinners so there is something 
@@ -317,7 +318,7 @@
                     </p>
                     <div class="row justify-content-center text-center">
                         <!--The first card-->
-                        <div class="col-md-4">
+                        <div class="col-md-4" data-aos="fade-right">
                             <div class="card">
                                 <img src="images/img4.jpg" alt="img1" class="card-img-top">
                                 <div class="card-body">
@@ -340,7 +341,7 @@
                             </div>
                         </div>
                         <!--The second card-->
-                        <div class="col-md-4">
+                        <div class="col-md-4" data-aos="fade-up">
                             <div class="card">
                                 <img src="images/img4.jpg" alt="img1" class="card-img-top">
                                 <div class="card-body">
@@ -363,7 +364,7 @@
                             </div>
                         </div>
                         <!--The Third card-->
-                        <div class="col-md-4">
+                        <div class="col-md-4" data-aos="fade-left">
                             <div class="card">
                                 <img src="images/img4.jpg" alt="img1" class="card-img-top">
                                 <div class="card-body">
@@ -391,7 +392,7 @@
         </main>
 
         <footer>
-            <div class="section-8 text-center">
+            <div class="section-8 text-center" data-aos="fade">
                 <h4 style="margin-top: 4%;">Kenya Scoliosis Foundation</h4>
                 <h6 class="my-4">Go ahead of the curve</h6>
 
@@ -422,5 +423,12 @@
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="js/animation.js" type="text/javascript"></script>
     <script src="js/jquery-3.5.0.js" type="text/javascript"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 200,
+            duration: 800
+        });
+    </script>
     
 </hmtl>
