--- a/finances.html
+++ b/finances.html
@@ -7,7 +7,7 @@
         <title>Kenya Scoliosis Foundation</title>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="css/style.css">
 
         <!--For icons-->
@@ -68,7 +68,7 @@
             <div class="section-15">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-6" data-aos="fade-right">
                             <h1 class="text-white">How do we use our Finances ?</h1>
                             <p class="para-1">
                                 <li>
@@ -82,7 +82,7 @@
                                 <li>Create a Resource Centre (Scoliosis and Spine Centre)</li>
                             </p>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6" data-aos="fade-left">
                             <img src="images/finances.jpg" alt="img2" width="590">
                             <p class="details">Scoliometer used for screening scoliosis</p>
                         </div>
@@ -92,7 +92,7 @@
         </main>
 
         <footer>
-            <div class="section-8 text-center">
+            <div class="section-8 text-center" data-aos="fade">
                 <h4 style="margin-top: 4%;">Kenya Scoliosis Foundation</h4>
                 <h6 class="my-4">Go ahead of the curve</h6>
 
@@ -123,5 +123,12 @@
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="js/animation.js" type="text/javascript"></script>
     <script src="js/jquery-3.5.0.js" type="text/javascript"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 50,
+            duration: 800
+        });
+    </script>
     
 </hmtl>
