--- a/ourGoals.html
+++ b/ourGoals.html
@@ -7,7 +7,7 @@
         <title>Kenya Scoliosis Foundation</title>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="css/style.css">
 
         <!--For icons-->
@@ -68,7 +68,7 @@
             <div class="section-10">
                 <div class="container text-center">
                     <div class="row justify-content-center text-center">
-                        <div class="col-md-5">
+                        <div class="col-md-5" data-aos="fade-right">
                             <h1 class="text-white mt-3">Our Goal</h1>
                             <p class="para-1">
                                 Our goal is to create a resource centre for medical proffesionals and researchers to visit regularly to check on children and 
@@ -83,7 +83,7 @@
                             </a>
                         </div>
 
-                        <div class="col-md-7">
+                        <div class="col-md-7" data-aos="fade-left">
                             <img src="images/goals&values.JPG" alt="ourGoals" width="590px" class="mt-3 mb-3">
                         </div>
                     </div>
@@ -92,7 +92,7 @@
         </main>
 
         <footer>
-            <div class="section-8 text-center">
+            <div class="section-8 text-center" data-aos="fade">
                 <h4 style="margin-top: 4%;">Kenya Scoliosis Foundation</h4>
                 <h6 class="my-4">Go ahead of the curve</h6>
 
@@ -123,5 +123,12 @@
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="js/animation.js" type="text/javascript"></script>
     <script src="js/jquery-3.5.0.js" type="text/javascript"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 100,
+            duration: 800
+        });
+    </script>
     
 </hmtl>
