--- a/ourLeadership.html
+++ b/ourLeadership.html
@@ -7,7 +7,7 @@
         <title>Kenya Scoliosis Foundation</title>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="css/style.css">
 
         <!--For icons-->
@@ -68,7 +68,7 @@
             <div class="section-26">
                 <div class="container">
                     <div class="row justify-content-center">
-                        <div class="col-md-6">
+                        <div class="col-md-6" data-aos="fade-right">
                             <h3 class="text-white mt-3">Esther Wangui Gathiru</h3>
                             <h6 class="text-white">Founder & President</h6>
                             <p class="para-1">
@@ -83,7 +83,7 @@
                             </p>
                         </div>
 
-                        <div class="col-md-6">
+                        <div class="col-md-6" data-aos="fade-left">
                             <img src="images/founder.jpeg" alt="Founder" class="mt-3 mb-3">
                         </div>
                     </div>
@@ -94,10 +94,10 @@
             <div class="section-27">
                 <div class="container">
                     <div class="row justify-content-center">
-                        <div class="col-md-6">
+                        <div class="col-md-6" data-aos="fade-right">
                             <img src="images/co-founder.jpg" alt="Founder" class="mt-3 mb-3">
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6" data-aos="fade-left">
                             <h3 class="mt-3">Andrea Lebel</h3>
                             <h6 class="text-muted">Co-Founder</h6>
                             <p class="para-1">
@@ -117,7 +117,7 @@
         </main>
 
         <footer>
-            <div class="section-8 text-center">
+            <div class="section-8 text-center" data-aos="fade">
                 <h4 style="margin-top: 4%;">Kenya Scoliosis Foundation</h4>
                 <h6 class="my-4">Go ahead of the curve</h6>
 
@@ -148,5 +148,12 @@
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="js/animation.js" type="text/javascript"></script>
     <script src="js/jquery-3.5.0.js" type="text/javascript"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 50,
+            duration: 800
+        });
+    </script>
     
 </hmtl>
