--- a/ourMission.html
+++ b/ourMission.html
@@ -7,7 +7,7 @@
         <title>Kenya Scoliosis Foundation</title>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="css/style.css">
 
         <!--For icons-->
@@ -68,10 +68,10 @@
             <div class="section-9">
                 <div class="container text-center">
                     <div class="row justify-content-center text-center ">
-                        <div class="col-md-7 mb-5">
+                        <div class="col-md-7 mb-5" data-aos="fade-right">
                             <img src="images/ourMission.JPG" alt="ourMission" width="590" class="mt-3 mb-3">
                         </div>
-                        <div class="col-md-5">
+                        <div class="col-md-5" data-aos="fade-left">
                             <h1 class="text-white mt-3">Our Mission</h1>
                             <p class="para-1">
                                 <strong>Kenya Scoliosis Foundation</strong> was created to promote public awareness, screening, research, train nationwide, 
@@ -88,7 +88,7 @@
         </main>
 
         <footer>
-            <div class="section-8 text-center">
+            <div class="section-8 text-center" data-aos="fade">
                 <h4 style="margin-top: 4%;">Kenya Scoliosis Foundation</h4>
                 <h6 class="my-4">Go ahead of the curve</h6>
 
@@ -119,5 +119,12 @@
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="js/animation.js" type="text/javascript"></script>
     <script src="js/jquery-3.5.0.js" type="text/javascript"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 200,
+            duration: 800
+        });
+    </script>
     
 </hmtl>
