--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
         <title>Kenya Scoliosis Foundation</title>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="css/style.css">
 
         <!--For icons-->
@@ -68,10 +68,10 @@
             <div class="section-24">
                 <div class="container-fluid">
                     <div class="card mt-0">
-                        <img src="images/img8.jpg" alt="blog" class="card-img-top">
+                        <img src="images/img8.jpg" alt="blog" class="card-img-top" data-aos="fade">
                         <div class="row py-2 px-4">
                             <!--Blog-->
-                        <div class="col-md-8">
+                        <div class="col-md-8" data-aos="fade">
                             <article class="blog-post mb-3 py-4 px-4">
                                 <h1 class="blog-title"><span class="ml-2">My blog post title</span></h1>
                                 <p class="text-muted">
@@ -122,7 +122,7 @@
                         <!--sidebar-->
                         <div class="col-md-4">
                             <!--Related articles-->
-                            <div class="container mt-4">
+                            <div class="container mt-4" data-aos="fade-left">
                                 <h3 class="top-articles"><span class="ml-2">Related Articles</span></h3>
                                 <article>
                                     <div class="row">
@@ -153,7 +153,7 @@
                                 </article>
                             </div>
                             <!--Categories-->
-                            <div class="container category">
+                            <div class="container category" data-aos="fade-left">
                                 <h3 class="category-list pt-2"><span class="ml-2">Categories</span></h3>
                                 <div class="categories m-0">
                                     <a href="#" class="nav-link">News</a>
@@ -179,7 +179,7 @@
         </main>
 
         <footer>
-            <div class="section-8 text-center">
+            <div class="section-8 text-center" data-aos="fade">
                 <h4 style="margin-top: 4%;">Kenya Scoliosis Foundation</h4>
                 <h6 class="my-4">Go ahead of the curve</h6>
 
@@ -210,5 +210,11 @@
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="js/animation.js" type="text/javascript"></script>
     <script src="js/jquery-3.5.0.js" type="text/javascript"></script>
-    
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 50,
+            duration: 800
+        });
+    </script>
 </hmtl>
