--- a/contactUs.html
+++ b/contactUs.html
@@ -7,7 +7,7 @@
         <title>Kenya Scoliosis Foundation</title>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="css/style.css">
 
         <!--For icons-->
@@ -67,13 +67,13 @@
             <!--Section 17-->
             <div class="section-17">
                 <div class="container justify-content-center text-center">
-                    <h1 class="heading-1">Want to be a Part of Us?</h1>
-                    <p class="para-1">
+                    <h1 class="heading-1" data-aos="fade">Want to be a Part of Us?</h1>
+                    <p class="para-1" data-aos="fade-up">
                         Want to contact Kenya Scoliosis Foundation? We'd love to hear from you!
                     </p>
 
                     <div class="row">
-                        <div class="col-md-7 contact-form">
+                        <div class="col-md-7 contact-form" data-aos="fade-right">
                             <h1 class="">Get in touch</h1>
                             <form>
                                 <div class="form-row">
@@ -98,7 +98,7 @@
                             </form> 
                         </div>
                         
-                        <div class="col-md-5">
+                        <div class="col-md-5" data-aos="fade-left">
                             <h4 class="heading-1">Our Contact Details</h4>
                             <i class="fas fa-envelope" id="email"></i>
                             <label for="email" class="details">kenyascoliosisf@gmail.com</label>
@@ -120,7 +120,7 @@
         </main>
 
         <footer>
-            <div class="section-8 text-center">
+            <div class="section-8 text-center" data-aos="fade">
                 <h4 style="margin-top: 4%;">Kenya Scoliosis Foundation</h4>
                 <h6 class="my-4">Go ahead of the curve</h6>
 
@@ -151,5 +151,12 @@
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="js/animation.js" type="text/javascript"></script>
     <script src="js/jquery-3.5.0.js" type="text/javascript"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 50,
+            duration: 800
+        });
+    </script>
     
 </hmtl>
