--- a/eventDetails.html
+++ b/eventDetails.html
@@ -7,7 +7,7 @@
         <title>Kenya Scoliosis Foundation</title>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="css/style.css">
 
         <!--For icons-->
@@ -70,8 +70,8 @@
                     <div class="row justify-content-center">
                         <div class="col-md-12">
                             <div class="card">
-                                <img src="images/img8.jpg" alt="types Of Scoliosis" class="card-img-top">
-                                <div class="card-body">
+                                <img src="images/img8.jpg" alt="types Of Scoliosis" class="card-img-top" data-aos="fade">
+                                <div class="card-body" data-aos="fade">
                                     <h2 class="card-title heading-1">Event Name</h2>
                                     <h3 class="card-title subtitles"><span class="ml-2">Time & Location</span></h3>
                                     <p class="card-text">
@@ -135,7 +135,14 @@
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="js/animation.js" type="text/javascript"></script>
     <script src="js/jquery-3.5.0.js" type="text/javascript"></script>
-    
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 50,
+            duration: 800
+        });
+    </script>
+
     <!--Google maps API-->
     <script>
         var map;
@@ -145,6 +152,7 @@
             zoom: 8
           });
         }
+        
       </script>
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkUOdZ5y7hMm0yrcCQoCvLwzdM6M8s5qk&callback=initMap"
       async defer></script>
