--- a/rsvp.html
+++ b/rsvp.html
@@ -7,7 +7,7 @@
         <title>Kenya Scoliosis Foundation</title>
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="css/style.css">
 
         <!--For icons-->
@@ -69,7 +69,7 @@
                 <div class="container justify-content-center ">
 
                     <div class="row">
-                        <div class="col-md-7">
+                        <div class="col-md-7" data-aos="fade">
                             <h1 class="heading-1 mt-5">Add Your Details</h1>
                             <form action="rsvpThankyou.html">
                                 <div class="form-row">
@@ -94,7 +94,7 @@
                                 <button type="submit" class="btn w-100">Check Out</button>
                             </form> 
                         </div>
-                        <div class="col-md-5">
+                        <div class="col-md-5" data-aos="fade">
                             <div class="card">
                                 <div class="card-body">
                                     <h4 class="card-title">Event Name</h4>
@@ -130,7 +130,7 @@
         </main>
 
         <footer>
-            <div class="section-8 text-center">
+            <div class="section-8 text-center" data-aos="fade">
                 <h4 style="margin-top: 4%;">Kenya Scoliosis Foundation</h4>
                 <h6 class="my-4">Go ahead of the curve</h6>
 
@@ -161,5 +161,12 @@
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="js/animation.js" type="text/javascript"></script>
     <script src="js/jquery-3.5.0.js" type="text/javascript"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 50,
+            duration: 800
+        });
+    </script>
     
 </hmtl>
