--- a/adminlogin.html
+++ b/adminlogin.html
@@ -4,12 +4,13 @@
         <title>Admin KSF</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css">
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <script src="https://kit.fontawesome.com/bd3ff9c68f.js" crossorigin="anonymous"></script>
     </head>
     <body id="admin">
         <div class="section-22">
-            <div class="modal-dialog text-center">
+            <div class="modal-dialog text-center" data-aos="fade">
                 <div class="col-sm-9 main-section">
                     <img src="images/ksflogo.png" alt="KSF logo" class="logo">
                     <div class="modal-content">
@@ -58,5 +59,12 @@
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script src="js/animation.js" type="text/javascript"></script>
     <script src="js/jquery-3.5.0.js" type="text/javascript"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            offset: 50,
+            duration: 800
+        });
+    </script>
   
 </html>
