--- a/Admin/adminAddEvent.html
+++ b/Admin/adminAddEvent.html
@@ -228,7 +228,7 @@
                                             <div class="form-group">
                                                 <label for="eventVenue" class="text-muted">Location</label>
                                                 <br>
-                                                <input type="text" id="eventVenue" class="form-control eventName" placeholder="Location of event" required>
+                                                <input type="text" id="eventVenue" class="form-control" placeholder="Location of event" required>
                                             </div>
                                         </div>
                                         <div class="col-md-5"></div>
