--- a/Admin/adminEvent.html
+++ b/Admin/adminEvent.html
@@ -24,12 +24,12 @@
                         <!--Side Menu-->
                         <div class="col-xl-2 xol-lg-3 col-md-4 sidebar fixed-top">
                             <a href="adminDashboard.html" class="navbar-brand text-white d-lock mx-auto text-center py-3 mb-4 bottom-border w-100">
-                                <img src="images/ksflogo.png" alt="">
+                                <img src="../images/ksflogo.png" alt="">
                             </a>
                             <div class="bottom-border pb-3">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img src="images/face.png" alt="user" width="50" class="rounded-circle mr-3">
+                                        <img src="../images/face.png" alt="user" width="50" class="rounded-circle mr-3">
                                     </div>
                                     <div class="col-md-9">
                                         <a href="adminProfile.html" class="user">
@@ -55,7 +55,7 @@
                                 <li class="nav-item">
                                     <a href="adminBlog.html" class="nav-link text-white p-3 mb-2 sidebar-link">
                                         <i class="fas fa-clipboard-list text-light fa-lg mr-3"></i>
-                                        The Scolio Talk
+                                        The ScolioTalk
                                     </a>
                                 </li>
                                 <li class="nav-item">
@@ -153,7 +153,7 @@
                         <div class="row pt-md-5 mt-md-5 mb-md-3">
                             <div class="col-lg-7 col-sm-5 ml-5">
                                 <h1 class="heading-1">Upcomming Events</h1>
-                                <p class="text-muted"> You have 4 upcomming events</p>
+                                <p class="text-muted"> You have <span class="numberOfEvents">4</span> upcomming events</p>
                             </div>
                             <div class="col-lg-4 col-sm-3 mt-4 text-right">
                                 <a href="adminAddEvent.html">
@@ -168,7 +168,7 @@
                             <div class="row">
                                 <!--Event Image-->
                                 <div class="col-sm-4">
-                                    <img src="images/img4.jpg" alt="event-img" class="img-fluid">
+                                    <img src="../images/img4.jpg" alt="event-img" class="img-fluid">
                                 </div>
                                 <!--Event Details-->
                                 <div class="col-sm-8">
@@ -207,7 +207,7 @@
                             <div class="row">
                                 <!--Event Image-->
                                 <div class="col-sm-4">
-                                    <img src="images/img4.jpg" alt="event-img" class="img-fluid">
+                                    <img src="../images/img4.jpg" alt="event-img" class="img-fluid">
                                 </div>
                                 <!--Event Details-->
                                 <div class="col-sm-8">
@@ -246,7 +246,7 @@
                             <div class="row">
                                 <!--Event Image-->
                                 <div class="col-sm-4">
-                                    <img src="images/img4.jpg" alt="event-img" class="img-fluid">
+                                    <img src="../images/img4.jpg" alt="event-img" class="img-fluid">
                                 </div>
                                 <!--Event Details-->
                                 <div class="col-sm-8">
@@ -285,7 +285,7 @@
                             <div class="row">
                                 <!--Event Image-->
                                 <div class="col-sm-4">
-                                    <img src="images/img4.jpg" alt="event-img" class="img-fluid">
+                                    <img src="../images/img4.jpg" alt="event-img" class="img-fluid">
                                 </div>
                                 <!--Event Details-->
                                 <div class="col-sm-8">
