--- a/Admin/adminEventBookings.html
+++ b/Admin/adminEventBookings.html
@@ -24,12 +24,12 @@
                         <!--Side Menu-->
                         <div class="col-xl-2 xol-lg-3 col-md-4 sidebar fixed-top">
                             <a href="adminDashboard.html" class="navbar-brand text-white d-lock mx-auto text-center py-3 mb-4 bottom-border w-100">
-                                <img src="images/ksflogo.png" alt="">
+                                <img src="../images/ksflogo.png" alt="">
                             </a>
                             <div class="bottom-border pb-3">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img src="images/face.png" alt="user" width="50" class="rounded-circle mr-3">
+                                        <img src="../images/face.png" alt="user" width="50" class="rounded-circle mr-3">
                                     </div>
                                     <div class="col-md-9">
                                         <a href="adminProfile.html" class="user">
@@ -55,7 +55,7 @@
                                 <li class="nav-item">
                                     <a href="adminBlog.html" class="nav-link text-white p-3 mb-2 sidebar-link">
                                         <i class="fas fa-clipboard-list text-light fa-lg mr-3"></i>
-                                        The Scolio Talk
+                                        The ScolioTalk
                                     </a>
                                 </li>
                                 <li class="nav-item">
@@ -329,12 +329,6 @@
                                                             <a href="#" class="page-link py-2 px-3">1</a>
                                                         </li>
                                                         <li class="page-item">
-                                                            <a href="#" class="page-link py-2 px-3">2</a>
-                                                        </li>
-                                                        <li class="page-item">
-                                                            <a href="#" class="page-link py-2 px-3">3</a>
-                                                        </li>
-                                                        <li class="page-item">
                                                             <a href="#" class="page-link py-2 px-3">
                                                                 <span>&raquo;</span>
                                                             </a>
@@ -386,25 +380,6 @@
                                 </div>
                             </div>
                         </main>
-
-                        <!--Cancel Event Modal-->
-                        <div class="modal fade" id="cancelEvent">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h4 class="modal-title">Cancel Event?</h4>
-                                        <button class="close" type="button" data-dismiss="modal">&times;</button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <p>Are you sure you want to cancel the event?</p>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button onclick="" class="btn cancelbtn mr-2">Yes I'm</button>
-                                        <button type="button" class="btn exitbtn" data-dismiss="modal">Cancel</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
 
                     </div>
                 </div>
