--- a/Admin/adminlogin.html
+++ b/Admin/adminlogin.html
@@ -41,7 +41,7 @@
                                         <input type="password" class="form-control" placeholder="Password" id="password" required>
                                     </div>
                                 </div>
-                                <button type="submit" class="btn btn-success">Login</button>
+                                <button type="submit" class="btn btn-success text-center">Login</button>
                             </form>
                         </div>
     
