Credit Card Donation

--- a/donateCreditCard.html
+++ b/donateCreditCard.html
@@ -27,6 +27,19 @@
                                 <div class="col-md-4">
                                     <div class="card" data-aos="fade">
                                         <div class="card-body">
+                                            <h4 class="text-center mb-1">Project Name</h4>
+                                            <hr>
+                                            <img src="images/sunset.jpg" alt="project image" class="card-img-top">
+                                            <p class="para-1 mt-2">
+                                                Short Description of the project, this project will be used to help people with scoliosis 
+                                                the construction will be happen at Nanyuki Stadium
+                                            </p>
+                                            <h6 class="text-muted text-center">Target Amount: KES <span>1,000,000</span></h6>
+                                        </div>
+                                    </div>
+
+                                    <div class="card" data-aos="fade">
+                                        <div class="card-body">
                                             <h4 class="text-center mb-2">Finance Accountability</h4>
                                             <p class="para-1">
                                                 Practicing fiscal accountability is a critical aspect of KSF’s financial stewardship model. 
@@ -166,7 +179,7 @@
 
         AOS.init({
             offset: 50,
-            duration: 800
+            duration: 500
         });
     </script>
     
