--- a/eventDetails.html
+++ b/eventDetails.html
@@ -32,7 +32,8 @@
                                         <i class="fas fa-calendar-week"></i> <span>Date</span>
                                         <i class="fas fa-clock ml-3"></i> <span>Time</span>
                                         <br>
-                                        <i class="fas fa-map-marker-alt"></i> Venue
+                                        <i class="fas fa-map-marker-alt"></i> <span>Venue</span>
+                                        <i class="fas fa-ticket-alt ml-3"></i> Kshs <span>2,000</span>
                                     </p>
                                     <h3 class="card-title subtitles"><span class="ml-3">About the Event:</span></h3>
                                     <p class="card-text">
