--- a/index.html
+++ b/index.html
@@ -320,8 +320,10 @@
                                     <h4 class="card-title">Event</h4>
                                     <p class="card-text">
                                         <i class="fas fa-calendar-week"></i> Date 
-                                        <br>
+                                        <i class="fas fa-clock ml-2"></i> Time
+                                        <br> 
                                         <i class="fas fa-map-marker-alt"></i> Venue
+                                        <i class="fas fa-ticket-alt ml-2"></i> Kshs <span>2,000</span>
                                     </p>
                                     <label for="" class="card-text details">
                                         We have a host of wonderful events ined up for the year ahead that help raise funds and awereness 
@@ -344,8 +346,10 @@
                                     <h4 class="card-title">Event</h4>
                                     <p class="card-text">
                                         <i class="fas fa-calendar-week"></i> Date 
-                                        <br>
+                                        <i class="fas fa-clock ml-2"></i> Time
+                                        <br> 
                                         <i class="fas fa-map-marker-alt"></i> Venue
+                                        <i class="fas fa-ticket-alt ml-2"></i> Kshs <span>2,000</span>
                                     </p>
                                     <label for="" class="card-text details">
                                         We have a host of wonderful events ined up for the year ahead that help raise funds and awereness 
@@ -370,8 +374,10 @@
                                     <h4 class="card-title">Event</h4>
                                     <p class="card-text">
                                         <i class="fas fa-calendar-week"></i> Date 
-                                        <br>
+                                        <i class="fas fa-clock ml-2"></i> Time
+                                        <br> 
                                         <i class="fas fa-map-marker-alt"></i> Venue
+                                        <i class="fas fa-ticket-alt ml-2"></i> Kshs <span>2,000</span>
                                     </p>
                                     <label for="" class="card-text details">
                                         We have a host of wonderful events ined up for the year ahead that help raise funds and awereness 
